# swm_kkokkomu_video_server

./: README.md  data.json  ex2 copy.py  ex2copy.py  pyproject.toml
resource/: data.json
